removed puts to match implementation
