# gendocs/api/swagger.yaml
@@ -182,37 +182,6 @@ paths:
         404:
           description: "investment does not exist"
       x-swagger-router-controller: "Investment"
-    put:
-      tags:
-      - "investment"
-      summary: "updates an investment project, creating a new one if not found"
-      description: "Updates an existing investment project"
-      operationId: "updateInvestment"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "investmentId"
-        in: "path"
-        description: "UUID for a Data Hub investment project"
-        required: true
-        type: "string"
-        default: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      - in: "body"
-        name: "investment"
-        description: "Investment project data to update"
-        required: true
-        schema:
-          $ref: "#/definitions/InvestmentProject"
-      responses:
-        200:
-          description: "item updated"
-        201:
-          description: "item created"
-        400:
-          description: "invalid input, object invalid"
-      x-swagger-router-controller: "Investment"
     patch:
       tags:
       - "investment"
@@ -308,38 +277,6 @@ paths:
         404:
           description: "investment does not exist"
       x-swagger-router-controller: "Investment"
-    put:
-      tags:
-      - "investment"
-      summary: "updates an investment project value object, creating a new one if\
-        \ not found"
-      description: "Updates an existing investment project value object"
-      operationId: "updateInvestmentValue"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "investmentId"
-        in: "path"
-        description: "UUID for a Data Hub investment project"
-        required: true
-        type: "string"
-        default: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      - in: "body"
-        name: "investment"
-        description: "Investment project value data to update"
-        required: true
-        schema:
-          $ref: "#/definitions/InvestmentValue"
-      responses:
-        200:
-          description: "item updated"
-        201:
-          description: "item created"
-        400:
-          description: "invalid input, object invalid"
-      x-swagger-router-controller: "Investment"
     patch:
       tags:
       - "investment"
@@ -398,38 +335,6 @@ paths:
         404:
           description: "investment does not exist"
       x-swagger-router-controller: "Investment"
-    put:
-      tags:
-      - "investment"
-      summary: "updates an investment project requirements object, creating a new\
-        \ one if not found"
-      description: "Updates an existing investment project requirements object"
-      operationId: "updateInvestmentRequirements"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "investmentId"
-        in: "path"
-        description: "UUID for a Data Hub investment project"
-        required: true
-        type: "string"
-        default: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      - in: "body"
-        name: "investment"
-        description: "Investment project requirements data to update"
-        required: true
-        schema:
-          $ref: "#/definitions/InvestmentRequirements"
-      responses:
-        200:
-          description: "item updated"
-        201:
-          description: "item created"
-        400:
-          description: "invalid input, object invalid"
-      x-swagger-router-controller: "Investment"
     patch:
       tags:
       - "investment"
@@ -486,38 +391,6 @@ paths:
           description: "bad input parameter"
         404:
           description: "investment does not exist"
-      x-swagger-router-controller: "Investment"
-    put:
-      tags:
-      - "investment"
-      summary: "updates an investment project team object, creating a new one if not\
-        \ found"
-      description: "Updates an existing investment project team object"
-      operationId: "updateInvestmentTeam"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "investmentId"
-        in: "path"
-        description: "UUID for a Data Hub investment project"
-        required: true
-        type: "string"
-        default: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      - in: "body"
-        name: "investment"
-        description: "Investment project team data to update"
-        required: true
-        schema:
-          $ref: "#/definitions/InvestmentTeam"
-      responses:
-        200:
-          description: "item updated"
-        201:
-          description: "item created"
-        400:
-          description: "invalid input, object invalid"
       x-swagger-router-controller: "Investment"
     patch:
       tags:
