# gendocs/controllers/Investment.js
@@ -51,19 +51,3 @@ module.exports.patchInvestmentTeam = function patchInvestmentTeam (req, res, nex
 module.exports.patchInvestmentValue = function patchInvestmentValue (req, res, next) {
   Investment.patchInvestmentValue(req.swagger.params, res, next);
 };
-
-module.exports.updateInvestment = function updateInvestment (req, res, next) {
-  Investment.updateInvestment(req.swagger.params, res, next);
-};
-
-module.exports.updateInvestmentRequirements = function updateInvestmentRequirements (req, res, next) {
-  Investment.updateInvestmentRequirements(req.swagger.params, res, next);
-};
-
-module.exports.updateInvestmentTeam = function updateInvestmentTeam (req, res, next) {
-  Investment.updateInvestmentTeam(req.swagger.params, res, next);
-};
-
-module.exports.updateInvestmentValue = function updateInvestmentValue (req, res, next) {
-  Investment.updateInvestmentValue(req.swagger.params, res, next);
-};
