# gendocs/controllers/InvestmentService.js
@@ -349,51 +349,3 @@ exports.patchInvestmentValue = function(args, res, next) {
   res.end();
 }
 
-exports.updateInvestment = function(args, res, next) {
-  /**
-   * updates an investment project, creating a new one if not found
-   * Updates an existing investment project
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentProject Investment project data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.updateInvestmentRequirements = function(args, res, next) {
-  /**
-   * updates an investment project requirements object, creating a new one if not found
-   * Updates an existing investment project requirements object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentRequirements Investment project requirements data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.updateInvestmentTeam = function(args, res, next) {
-  /**
-   * updates an investment project team object, creating a new one if not found
-   * Updates an existing investment project team object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentTeam Investment project team data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.updateInvestmentValue = function(args, res, next) {
-  /**
-   * updates an investment project value object, creating a new one if not found
-   * Updates an existing investment project value object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentValue Investment project value data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
